[gd_scene load_steps=14 format=2]

[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Node.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Killfloor.gd" type="Script" id=4]
[ext_resource path="res://Objects/Platform.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/NodeSpawner.gd" type="Script" id=6]
[ext_resource path="res://Rubik-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Scripts/CoinSpawner.gd" type="Script" id=8]
[ext_resource path="res://Objects/Coin.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 445, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 6000 )

[node name="Main" type="Node2D"]
position = Vector2( -1.94141, -1.25681 )
script = ExtResource( 3 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Height" type="Label" parent="UILayer"]
anchor_left = -0.0166291
anchor_top = 0.986831
anchor_right = -0.0166291
anchor_bottom = 0.986831
margin_left = 548.959
margin_top = -1894.72
margin_right = 1014.96
margin_bottom = -1818.72
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="UILayer"]
margin_right = 80.0
margin_bottom = 1920.0
color = Color( 0.333333, 0.333333, 0.333333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UILayer"]
margin_left = 1000.0
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.333333, 0.333333, 0.333333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Points" type="Label" parent="UILayer"]
margin_left = 84.0
margin_right = 471.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeSpawner" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Node" parent="NodeSpawner" instance=ExtResource( 2 )]
position = Vector2( 540, 1000 )

[node name="Node2" parent="NodeSpawner" instance=ExtResource( 2 )]
position = Vector2( 270, 250 )

[node name="Node3" parent="NodeSpawner" instance=ExtResource( 2 )]
position = Vector2( 810, 250 )

[node name="Platform" parent="." instance=ExtResource( 5 )]
position = Vector2( 540, 1900 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 540, 1800 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -0.471807, -0.528076 )
current = true
limit_left = 0
limit_right = 1080
limit_bottom = 1920
drag_margin_h_enabled = true
drag_margin_v_enabled = true
offset_v = -0.3
drag_margin_left = 1.0
drag_margin_top = 0.75
drag_margin_right = 1.0
drag_margin_bottom = 1.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Killfloor" type="Area2D" parent="."]
position = Vector2( 540, 2000 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 4 )

[node name="KillfloorCollision" type="CollisionShape2D" parent="Killfloor"]
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2( 1000, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 4 )

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2( 80, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 4 )

[node name="CoinSpawner" type="Node" parent="."]
script = ExtResource( 8 )

[node name="Coin" parent="CoinSpawner" instance=ExtResource( 9 )]
position = Vector2( 547.099, 540.096 )

[connection signal="body_entered" from="Killfloor" to="Killfloor" method="_on_Killfloor_body_entered"]
